fixed server skills bar length on iPhone Plus models and s8+

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -688,7 +688,7 @@ pre code {
  }
 }
 
-@media only screen (min width: 600px) and (max width: 800px) {
+@media screen (min width: 600px) and (max width: 800px) {
 
  .server {
  width: 79%;
